chore: use record in dependency analyzer (#2668)
In this PR:
- Convert POJO to record.